--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,21 +5,21 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:RDB"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1920" WindowState="Maximized">
+        Title="MainWindow" Height="1000" Width="1920" WindowState="Maximized" Loaded="Window_Loaded">
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="65"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="65"/>
             <RowDefinition Height="65"/>
         </Grid.RowDefinitions>
-        <Grid Margin="10" Grid.Row="1">
+        <Grid Margin="10" Grid.Row="2">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
-
             </Grid.ColumnDefinitions>
             <ComboBox x:Name="branyCB" Margin="5,0"></ComboBox>
         </Grid>
-        <Grid Height="50" Margin="10" Grid.Row="2"   VerticalAlignment="Bottom">
+        <Grid Height="50" Margin="10" Grid.Row="3"   VerticalAlignment="Bottom">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="130"/>
@@ -31,7 +31,8 @@
             <Button x:Name="LoadButton"  Content="Load" Margin="5" Grid.Column="3" Click="LoadButton_Click"/>
             <TextBox Margin="5" TextWrapping="Wrap" Text="TextBox"/>
         </Grid>
-        <DataGrid x:Name="DataGrid" Margin="15" />
+        <DataGrid x:Name="DataGrid" Margin="15" Grid.Row="1" />
+        <ProgressBar x:Name="ProgressBar" Height="45" Margin="15,10,15,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Window>
